syntax = "proto3";

package spacex.api.device;

// Service for communicating with Starlink dish
service Device {
  // Get device information
  rpc GetDeviceInfo(GetDeviceInfoRequest) returns (GetDeviceInfoResponse);
  
  // Get device status
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}

// Request for device information
message GetDeviceInfoRequest {}

// Response containing device information
message GetDeviceInfoResponse {
  string id = 1;
  string hardware_version = 2;
  string software_version = 3;
  string country_code = 4;
  int32 utc_offset_s = 5;
}

// Request for device status
message GetStatusRequest {}

// Response containing device status
message GetStatusResponse {
  // Current uptime in seconds
  uint64 uptime_s = 1;
  
  // Signal to noise ratio
  float snr = 2;
  
  // Currently connected
  bool connected = 3;
  
  // Download speed in Mbps
  float downlink_throughput_bps = 4;
  
  // Upload speed in Mbps
  float uplink_throughput_bps = 5;
  
  // Latency in milliseconds
  float pop_ping_latency_ms = 6;
  
  // Number of seconds with no communication
  uint32 seconds_to_first_nonempty_slot = 7;
  
  // Obstruction statistics
  ObstructionStats obstruction_stats = 8;
}

// Obstruction statistics
message ObstructionStats {
  // Whether there are currently obstructions
  bool currently_obstructed = 1;
  
  // Fraction of time obstructed (0.0 - 1.0)
  float fraction_obstructed = 2;
  
  // Time in seconds with valid data
  uint32 valid_s = 3;
}
