import { BaseService } from './BaseService';
import { StarlinkClient } from '../client';
import * as Device from '../types';

/**
 * Dish service for satellite dish operations
 *
 * Provides methods for:
 * - Dish positioning and stowing
 * - Obstruction detection and mapping
 * - EMC (Electromagnetic Compatibility) configuration
 * - Dish configuration and status
 * - Power management
 * - RSSI scanning
 * - Diagnostics
 */
export class DishService extends BaseService {
  constructor(client: StarlinkClient) {
    super(client);
  }

  /**
   * Get dish context information
   *
   * @example
   * ```typescript
   * const context = await client.dish.getContext({});
   * console.log('Cell ID:', context.cellId);
   * console.log('Obstruction:', context.obstructionFraction);
   * ```
   */
  async getContext(request: any): Promise<Device.Dish.DishGetContextResponse> {
    this.debug('Getting dish context', request);
    // Implementation would use gRPC client to call Device.handle with DishGetContextRequest
    // For now, return a placeholder
    return {} as Device.Dish.DishGetContextResponse;
  }

  /**
   * Get dish status
   *
   * @example
   * ```typescript
   * const status = await client.dish.getStatus({});
   * console.log('Boresight Azimuth:', status.boresightAzimuthDeg);
   * console.log('Boresight Elevation:', status.boresightElevationDeg);
   * ```
   */
  async getStatus(_request: any): Promise<Device.Dish.DishGetStatusResponse> {
    this.debug('Getting dish status');
    return {} as Device.Dish.DishGetStatusResponse;
  }

  /**
   * Stow or unstow the dish
   *
   * @example
   * ```typescript
   * await client.dish.stow({ unstow: false });
   * ```
   */
  async stow(request: any): Promise<Device.Dish.DishStowResponse> {
    this.debug('Stowing dish', request);
    return {} as Device.Dish.DishStowResponse;
  }

  /**
   * Get obstruction map
   *
   * @example
   * ```typescript
   * const map = await client.dish.getObstructionMap({});
   * console.log('Obstruction data:', map.snr);
   * ```
   */
  async getObstructionMap(request: any): Promise<Device.Dish.DishGetObstructionMapResponse> {
    this.debug('Getting obstruction map', request);
    return {} as Device.Dish.DishGetObstructionMapResponse;
  }

  /**
   * Clear obstruction map
   *
   * @example
   * ```typescript
   * await client.dish.clearObstructionMap({});
   * ```
   */
  async clearObstructionMap(request: any): Promise<Device.Dish.DishClearObstructionMapResponse> {
    this.debug('Clearing obstruction map', request);
    return {} as Device.Dish.DishClearObstructionMapResponse;
  }

  /**
   * Get EMC (Electromagnetic Compatibility) settings
   *
   * @example
   * ```typescript
   * const emc = await client.dish.getEmc({});
   * console.log('EMC settings:', emc);
   * ```
   */
  async getEmc(request: any): Promise<Device.Device.DishGetEmcResponse> {
    this.debug('Getting EMC settings', request);
    return {} as Device.Device.DishGetEmcResponse;
  }

  /**
   * Set EMC (Electromagnetic Compatibility) settings
   *
   * @example
   * ```typescript
   * await client.dish.setEmc({ theta: 45.0, phi: 90.0 });
   * ```
   */
  async setEmc(request: any): Promise<Device.Device.DishSetEmcResponse> {
    this.debug('Setting EMC settings', request);
    return {} as Device.Device.DishSetEmcResponse;
  }

  /**
   * Get dish configuration
   *
   * @example
   * ```typescript
   * const config = await client.dish.getConfig({});
   * console.log('Config:', config);
   * ```
   */
  async getConfig(request: any): Promise<Device.Dish.DishGetConfigResponse> {
    this.debug('Getting dish config', request);
    return {} as Device.Dish.DishGetConfigResponse;
  }

  /**
   * Set dish configuration
   *
   * @example
   * ```typescript
   * await client.dish.setConfig({ config: {...} });
   * ```
   */
  async setConfig(
    request: Device.Dish.DishSetConfigRequest
  ): Promise<Device.Dish.DishSetConfigResponse> {
    this.debug('Setting dish config', request);
    return {} as Device.Dish.DishSetConfigResponse;
  }

  /**
   * Enable or disable power save mode
   *
   * @example
   * ```typescript
   * await client.dish.setPowerSave({
   *   enablePowerSave: true,
   *   powerSaveStartMinutes: 0,
   *   powerSaveDurationMinutes: 60
   * });
   * ```
   */
  async setPowerSave(request: Device.Device.DishPowerSaveRequest): Promise<void> {
    this.debug('Setting power save', request);
  }

  /**
   * Activate RSSI scan
   *
   * @example
   * ```typescript
   * const result = await client.dish.activateRssiScan({...});
   * console.log('Scan success:', result.success);
   * ```
   */
  async activateRssiScan(
    request: Device.Dish.DishActivateRssiScanRequest
  ): Promise<Device.Dish.DishActivateRssiScanResponse> {
    this.debug('Activating RSSI scan', request);
    return {} as Device.Dish.DishActivateRssiScanResponse;
  }

  /**
   * Get RSSI scan results
   *
   * @example
   * ```typescript
   * const results = await client.dish.getRssiScanResult({});
   * console.log('Results:', results);
   * ```
   */
  async getRssiScanResult(
    request: Device.Dish.DishGetRssiScanResultRequest
  ): Promise<Device.Dish.DishGetRssiScanResultResponse> {
    this.debug('Getting RSSI scan results', request);
    return {} as Device.Dish.DishGetRssiScanResultResponse;
  }

  /**
   * Get dish diagnostics
   *
   * @example
   * ```typescript
   * const diag = await client.dish.getDiagnostics({});
   * console.log('Diagnostics:', diag);
   * ```
   */
  async getDiagnostics(): Promise<Device.Device.DishGetDiagnosticsResponse> {
    this.debug('Getting dish diagnostics');
    return {} as Device.Device.DishGetDiagnosticsResponse;
  }
}
